--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.Apps {
+  text-align: center;
+  background-color: orange;
+  width: 100px;
+  height: 400px;
+  display: flex;
+}
